Fix moving hotspots when expand/collapse tree in Simple template

--- a/less/styledContent.less
+++ b/less/styledContent.less
@@ -231,6 +231,7 @@
 
     &.hotspot-on-image-container {
         text-align: center;
+		line-height: 0;
     }
 
     iframe {
